--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,10 @@ SWAP_MAX_AMOUNT = 100000000
 LNBITS_HOST="http://host.docker.internal:5000/api"
 LNBITS_WEBHOOK_URL="http://127.0.0.1:1536/api/v1/lnbits/webhook"
 
-#### LNBITS_MAIN_WALLET_ADMIN_KEY=""
-#### LNBITS_MAIN_WALLET_INVOICE_KEY=""
-#### LNBITS_SPLIT_WALLET_ADMIN_KEY=""
-#### LNBITS_SPLIT_WALLET_INVOICE_KEY
+#### LNBITS_MAIN_WALLET_ADMIN_KEY = ""
+#### LNBITS_MAIN_WALLET_INVOICE_KEY = ""
+#### LNBITS_SPLIT_WALLET_ADMIN_KEY = ""
+#### LNBITS_SPLIT_WALLET_INVOICE_KEY = ""
 
 # ----- Frotend -----
 
