--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ LNBITS_WEBHOOK_URL="http://127.0.0.1:1536/api/v1/lnbits/webhook"
 
 #### LNBITS_MAIN_WALLET_ADMIN_KEY = ""
 #### LNBITS_MAIN_WALLET_INVOICE_KEY = ""
+
+### Lnbits (Wallet for distributing fees among partners).
 #### LNBITS_SPLIT_WALLET_ADMIN_KEY = ""
 #### LNBITS_SPLIT_WALLET_INVOICE_KEY = ""
 
