--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "init",
+  "name": "ln-swap",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "cross-env": "^7.0.3",
     "lottie-react": "^2.3.1",
     "phosphor-react": "^1.4.1",
     "qrcode.react": "^3.1.0",
