--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # ----- Backend -----
-
 ### Redis configuration.
 REDIS_PASS = "password"
 
@@ -7,7 +6,8 @@ REDIS_PASS = "password"
 LND_HOST = "http://host.docker.internal:8080"
 LND_MACAROON = "" # $(sudo xxd -ps -u -c 1000 "~/.lnd/data/chain/bitcoin/mainnet/admin.macaroon")
 
-# Mirrors configuration.
+### Mirrors configuration.
+#### Hostname (Ex: alice.com, pedro.xyz ) separated by comma.
 MIRRORS_CLEAR_URL = ""
 MIRRORS_TOR_URL = ""
 
@@ -19,11 +19,5 @@ SWAP_MAX_AMOUNT = 100000000
 ### Lnbits configuration.
 LNBITS_HOST="http://host.docker.internal:5000/api"
 LNBITS_WEBHOOK_URL="http://127.0.0.1:1536/api/v1/lnbits/webhook"
-
-#### LNBITS_MAIN_WALLET_ADMIN_KEY = ""
-#### LNBITS_MAIN_WALLET_INVOICE_KEY = ""
-
-# ----- Frotend -----
-
-#### VITE_TITLE = "LN Swap"
-#### VITE_VINCENT_BACKEND = "http://localhost:1536"
+LNBITS_MAIN_WALLET_ADMIN_KEY = ""
+LNBITS_MAIN_WALLET_INVOICE_KEY = ""
