--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,12 @@ services:
     build: ./frontend
     container_name: lightning-swap-frontend
     ports:
-      - 4173:4173
+      - 5173:5173
     environment:
       - VITE_VINCENT_BACKEND=${VITE_VINCENT_BACKEND}
       - VITE_TITLE=${VITE_TITLE}
+    volumes:
+      - ./frontend/src:/app/src
     restart: on-failure
     stop_grace_period: 1m
 
