--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ### Redis configuration.
-REDIS_PASS = "password"
+REDIS_PASS = "6VnDpncOxaYvJ3j6YD3K"
 
 ### Lnd configuration.
 LND_HOST = "http://abuibrahim.local:8080"
